# PhotoBankingScripts

./: .gitignore  .pr-review-temp.txt  CLAUDE.md  CLAUDE_IDE_SETUP.md  Codex-input.txt  README.md  README_CLAUDE_SETUP.md  claude-analysis.md  codex-analysis.md  fix_zamtnuto_velikost.py  pyproject.toml  requirements-dev.txt  settings.json  user.template.json
.claude/: settings.json
MD Research/: Analýza Perplexity.txt  Analýza dostupnosti fotografií na fotobankách.txt  Analýzy COpilot.txt  compass_artifact_wf-1c465a2a-b346-45fa-9d9d-0662595eeae5_text_markdown.md  zprava-hluboky-vyzkum.md
cleanupmediadatabase/: IMPLEMENTATION_STATUS.md  cleanupmediadatabase.py
createbatch/: IMPLEMENTATION_STATUS.md  README.md  VERSION.md  constants-test.py  create_batch.py  createbatch.py  export_prepared_media.py  launch_photobanks.py  mark_media_as_checked.py  requirements.txt
exportpreparedmedia/: FileList.csv  README.md  VERSION.md  constants-test.py  export_prepared_media.py  exportpreparedmedia.py
givephotobankreadymediafiles/: IMPLEMENTATION_STATUS.md  REFACTOR_NOTES.md  constants-test.py  cuda_check.py  generatealternatives.py  givephotobankreadymediafiles.py  preparemediafile.py  requirements.txt
integratesortedphotos/: IMPLEMENTATION_STATUS.md  README.md  VERSION.md  constants-test.py  integrate_sorted_photos.py  requirements.txt
launchphotobanks/: README.md  VERSION.md  bank_urls.csv  launch_photo_banks.py
maintenance_scripts/: add_editorial_tags_to_photomedia.py  add_missing_editorial_tags.py  check_batch_prepared_statuses.py  check_prepared_not_in_batch.py  (+7 more)
(+710 files in other folders)
